--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,6 +3,7 @@
   height: 80vh;
   justify-content: center;
   align-items: center;
+  overflow-x: hidden;
 
   @include respond(tab-port) {
     overflow-x: hidden;
